# mock-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
mock_ai/: __main__.py  app.py  exceptions.py  mcp_app.py  settings.py  utils.py
mock_ai/mcps/: __init__.py  stateful.py  stateless.py
mock_ai/models/: __init__.py  base_ai_model.py  chat_model.py  embedding_model.py  image_model.py  markdown_chat.py  model_registry.py  ocr_model.py  parrot_chat.py  speech_model.py  standard_chat.py  standard_embedding.py  standard_image.py  standard_registry.py  standard_speech.py  structured_chat.py
mock_ai/models/chat/: chat_model.py  markdown_chat.py  standard_chat.py
mock_ai/models/embedding/: embedding_model.py
mock_ai/models/ocr/: ocr_model.py  standard_orc_model.py
mock_ai/models/speech/: speech_model.py
mock_ai/models/text_to_image/: image_model.py
mock_ai/schemas/: __init__.py  chat_completion_request.py  completion_out.py  completion_response.py  embedding_out.py  embedding_request.py  embedding_response.py  image_request.py  image_respnonse.py  image_response.py  model_out.py  ocr_request.py  ocr_response.py  speech_request.py  usage.py
pydantic_settings/: __init__.py
tests/: test_app.py  test_cli.py  test_cors.py  test_mcp.py  test_parrot_chat_model.py  test_standard_chat.py  test_standard_embedding.py  test_standard_image.py  test_standard_speech.py  test_structured_chat_model.py  test_utils.py
typer/: __init__.py  testing.py
uvicorn/: __init__.py
